[gd_scene load_steps=2 format=3 uid="uid://47nkegqkpqrv"]

[ext_resource type="Script" uid="uid://b3h44ctypc8wi" path="res://Scripts/Managers/AudioManager.gd" id="1_dygvs"]

[node name="AudioManager" type="Node"]
script = ExtResource("1_dygvs")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]

[node name="MenuSFXPlayer" type="AudioStreamPlayer" parent="."]

[node name="GlobalSFXPlayer" type="AudioStreamPlayer" parent="."]

[node name="TwoDSFXPlayer" type="AudioStreamPlayer2D" parent="."]
